syntax = "proto3";

package autokitteh.orgs.v1;

// Org represents an organization.
// `name` is a globally unique symbol for the organization.
// `display_name` is a human-readable name for the organization.
message Org {
  string org_id = 1;
  string display_name = 2;
}
